<resources>
  <string name="app_name">奇惑VR</string>
  <string name="app_english_name">X-VRDOF</string>
  <string name="vr">VR</string>
  <string name="config">sharePreference</string>

  <!--自动安装-->
  <string name="uninstall">卸载</string>
  <string name="install">安装</string>
  <string name="continue_install">继续安装</string>
  <string name="done">完成</string>
  <string name="open">打开</string>
  <string name="next">下一步</string>
  <string name="confirm">确定</string>
  <string name="force_stop">强行停止</string>
  <string name="search_hint">大家都在搜：奇惑VR</string>
  <string name="top_games">热门游戏</string>
  <string name="top_videos">热门视频</string>
  <string name="hint_game_name">游戏名字</string>
  <string name="hint_game_download">下载</string>
  <string name="hint_game_integral">积分</string>
  <string name="hint_game_type">类型</string>
  <string name="hint_game_size">游戏大小</string>
  <string name="hint_video_name">母鸡</string>
  <string name="hint_download_progress">下载进度</string>
  <string name="hint_download_speed">下载速度</string>
  <string name="title_activity_game_detail">GameDetailActivity</string>
  <string name="game_pic_share_name">gamePicShare</string>
  <string name="game_introduce">游戏介绍</string>
  <string name="game_intro_detail">《王者荣耀》是腾讯第一5V5英雄公平对战手游，于10月28日开启不限号测试！5V5王者峡谷（含迷雾模式）、5V5深渊大乱斗、以及3V3、1V1等多样模式一键体验，热血竞技尽享快感！海量英雄随心选择，精妙配合默契作战！10秒实时跨区匹配，与好友组队登顶最强王者！操作简单易上手，一血、五杀、超神，极致还原经典体验！实力操作公平对战，回归MOBA初心！
  我们拥有5V5经典地图，使用三路推塔核心玩法，呈现出最原滋原味的MOBA游戏对战体验！在王者荣耀里，我们根据英雄玩法使用不同的策略，根据英雄特色组建完美阵容，默契配合成就最强王者！</string>

  <string name="loading">正在加载</string>

  <string name="game_category_action">动作</string>
  <string name="game_category_dream">梦幻</string>
  <string name="game_category_risk">冒险</string>
  <string name="game_category_science">科幻</string>
  <string name="hint_search">请输入搜索内容</string>


  <string name="game">游戏</string>
  <string name="ranking">排行</string>
  <string name="video">视频</string>
  <string name="hint_search_name">名字</string>
  <string name="text_cancel_download">取消下载</string>
  <string name="back">返回</string>
  <string name="home">首页</string>
  <string name="person">我的</string>
  <string name="person_hot">热门</string>
  <string name="title_activity_login">LoginActivity</string>


  <string name="login">登录</string>
  <string name="registered">注册</string>
  <string name="account_hint">手机号码/用户名</string>
  <string name="password_hint">请输入密码</string>
  <string name="verification_code_hint">请输入验证码</string>
  <string name="registered_password_hint">6-20位不能全数字，不含特殊符号</string>
  <string name="register">注册</string>
  <string name="forgot_password">忘记密码</string>
  <string name="third_login">第三方登录</string>
  <string name="qq_login_description">qq快捷登录</string>
  <string name="wechat_login_description">wechat快捷登录</string>
  <string name="back_login_description">登录界面返回键</string>
  <string name="back_registered_description">注册界面返回键</string>
  <string name="back_forgot_pw_description">忘记密码界面返回键</string>
  <string name="has_account_to_continue">已有账号？继续</string>
  <string name="set_confrim">确认</string>
  <string name="logo_description">商标</string>
  <string name="get_verification_code">获取验证码</string>
  <string name="press_again_exit">再按一次退出</string>

  <!--设置-->
  <string name="setting">设置</string>
  <string name="setting_wifi_auto_update_key">wifi_anto_update_preference</string>
  <string name="setting_wifi_auto_update_summary">仅在Wi-Fi网络下自动下载并更新应用程序</string>
  <string name="setting_wifi_auto_upda_title">Wi-Fi自动更新</string>
  <string name="setting_message_remind_key">message_remind_preference</string>
  <string name="setting_message_remind_summary">桌面图标显示应用更新提示</string>
  <string name="setting_message_remind_title">讯息提醒</string>
  <string name="setting_check_update_key">check_update_perference</string>
  <string name="setting_version_now_summary">当前版本:1.0.0</string>
  <string name="setting_check_update_title">检查更新</string>
  <string name="setting_controller_key">controller_perference</string>

  <!--个人中心页-->
  <string name="person_download_manage">下载管理</string>
  <string name="person_app_uninstall">应用卸载</string>
  <string name="person_download_recent_download">最近的下载</string>
  <string name="person_download_continue_download">继续下载</string>
  <string name="person_download_cancel_all">全部取消</string>
  <string name="person_settings">设置</string>
  <string name="person_login">点我登录</string>
  <string name="person_account">账号：</string>
  <string name="person_integral">积分：</string>
  <string name="person_game_manager">下载管理</string>
  <string name="app_manage_uninstall">卸载</string>
  <string name="soaring_list">飙升榜</string>
  <string name="news_list">新品榜</string>
  <string name="download_list">下载榜</string>
  <string name="tip_no_download">下载的东西不见啦！（=´口｀=）</string>
  <string name="tip_disdownload_integrel">积分不足</string>

  <!--个人信息页-->
  <string name="person_msg_head">显示头像</string>
  <string name="person_msg_gender">性别</string>
  <string name="person_msg_birthday">生日</string>
  <string name="person_msg_phone">手机号码</string>
  <string name="person_msg_change_password">修改密码</string>
  <string name="person_msg_logout">退出登录</string>
  <string name="person_gender_noset">未设定</string>
  <string name="person_birthday">1990-8-2</string>
  <string name="person_msg_phone_tip">134****6889</string>
  <string name="person_sign">签到</string>
  <string name="person_change_gender">设定性别</string>
  <string name="person_select_birthday">设定生日</string>
  <string name="person_change_num">修改号码</string>
  <string name="person_verify_num">验证号码</string>
  <string name="person_verify_phone">手机号码：</string>
  <string name="person_verification_code">获取验证码</string>
  <string name="person_input_num">请输入手机号码</string>
  <string name="person_input_verification">请输入验证码</string>
  <string name="person_change_pwd">修改密码</string>
  <string name="person_man">男</string>
  <string name="person_woman">女</string>

  <!--Guide-->
  <string name="guide_into_main">进入主页</string>
  <string name="guide_skip">跳过>></string>
  <string name="person_determine">确定</string>
  <string name="person_message">个人信息</string>
  <string name="cancel">取消</string>
  <string name="camera">相机</string>
  <string name="gallery">图库</string>

  <!--签到-->
  <string name="sign_everyday">每日签到</string>
  <string name="sign">签到</string>
  <string name="sign_had">已签到</string>
  <string name="sign_continue_sign">已连续签到?天 ，签到得10积分</string>
  <string name="sign_time1">第1~2天</string>
  <string name="sign_time2">第3~4天</string>
  <string name="sign_time3">第5~6天</string>
  <string name="sign_time4">第7天</string>

  <string name="controller">控制器</string>

  <string name="integral_rule">1.连续签到1-2天，每天可获得10积分；\n\n2.连续签到3-4天，每天可获得15积分；\n\n3.连续签到5-6天，每天可获得20积分；\n\n4.连续签到7天以上，每天可获得25积分。\n\n如签到中途中断，从初始值开始计算。</string>
  <string name="integral_rule_title">连续签到，每日可获取奖励</string>
  <string name="integral_rule_toolbar">积分规则</string>
  <string name="exchange_record">兑换记录</string>
  <string name="exchange_succcess">兑换成功</string>

  <string name="person_record">兑换记录</string>
</resources>
