<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="85dp"
  android:background="@drawable/selector_view_click">

  <TextView
    android:id="@+id/tv_rangking"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_marginStart="8dp"
    android:gravity="center"
    android:textColor="@color/ranking_default"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.daydvr.store.view.custom.RoundImageView
    android:id="@+id/iv_game_icon"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="8dp"
    android:scaleType="fitXY"
    android:src="@mipmap/ic_launcher_round"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintDimensionRatio="1:1"
    app:layout_constraintStart_toEndOf="@+id/tv_rangking"
    app:layout_constraintTop_toTopOf="parent"
    app:type="round" />

  <TextView
    android:id="@+id/tv_game_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="8dp"
    android:hint="@string/hint_game_name"
    app:layout_constraintBottom_toTopOf="@+id/rb_game_rating"
    app:layout_constraintStart_toEndOf="@+id/iv_game_icon" />

  <RatingBar
    android:id="@+id/rb_game_rating"
    style="?android:attr/ratingBarStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_centerVertical="true"
    android:numStars="5"
    android:rating="5"
    android:theme="@style/RatingBar_Custom_Color"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="@+id/tv_game_name"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/bt_game_detail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_centerVertical="true"
    android:padding="2dp"
    android:background="@drawable/shape_download_btn"
    android:minHeight="16dp"
    android:minWidth="40dp"
    android:text="@string/hint_game_download"
    android:textColor="@color/color6"
    android:textSize="@dimen/textSize7"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tv_game_summary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:hint="@string/hint_game_smmary"
    android:textSize="@dimen/textSize7"
    app:layout_constraintStart_toStartOf="@+id/rb_game_rating"
    app:layout_constraintTop_toBottomOf="@+id/rb_game_rating" />

  <TextView
    android:id="@+id/tv_game_type"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:background="@drawable/shape_text_type"
    android:hint="@string/hint_game_type"
    android:textColor="@android:color/white"
    android:textSize="@dimen/textSize8"
    app:layout_constraintBottom_toBottomOf="@+id/tv_game_name"
    app:layout_constraintStart_toEndOf="@+id/tv_game_name"
    app:layout_constraintTop_toTopOf="@+id/tv_game_name" />

  <TextView
    android:id="@+id/tv_game_size"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:hint="@string/hint_game_size"
    android:textSize="@dimen/textSize6"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toEndOf="@+id/rb_game_rating"
    app:layout_constraintTop_toTopOf="parent" />

  <ProgressBar
    android:id="@+id/pb_download"
    style="?android:attr/progressBarStyleHorizontal"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="32dp"
    android:visibility="invisible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/bt_game_detail"
    app:layout_constraintStart_toStartOf="@+id/tv_game_name"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tv_download_progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:hint="@string/hint_download_progress"
    android:textSize="@dimen/textSize8"
    android:visibility="invisible"
    app:layout_constraintStart_toStartOf="@+id/tv_game_name"
    app:layout_constraintTop_toBottomOf="@id/pb_download" />

  <TextView
    android:id="@+id/tv_download_speed"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:hint="@string/hint_download_speed"
    android:textSize="@dimen/textSize8"
    android:visibility="invisible"
    app:layout_constraintEnd_toEndOf="@+id/pb_download"
    app:layout_constraintTop_toBottomOf="@id/pb_download" />

  <View
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@color/gray"
    app:layout_constraintBottom_toBottomOf="parent" />

  <TextView
    android:id="@+id/tv_cancel_download"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:autoLink="all"
    android:clickable="true"
    android:text="@string/text_cancel_download"
    android:textSize="@dimen/textSize8"
    android:visibility="invisible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/bt_game_detail"
    app:layout_constraintStart_toStartOf="@+id/bt_game_detail" />

</android.support.constraint.ConstraintLayout>