<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/appBackground"
  android:descendantFocusability="blocksDescendants">

  <include layout="@layout/item_toolbar" />

  <android.support.constraint.ConstraintLayout
    android:id="@+id/cl_recent_download"
    android:layout_width="match_parent"
    android:layout_height="24dp"
    app:layout_constraintTop_toBottomOf="@+id/cl_global">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginStart="16dp"
      android:text="@string/person_download_recent_download"
      android:textColor="@color/color2"
      android:textSize="@dimen/textSize6"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/tv_continue_download"
      style="@style/rencentDownloadTextStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginEnd="16dp"
      android:text="@string/person_download_continue_download"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/tv_cancel_all"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/tv_cancel_all"
      style="@style/rencentDownloadTextStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginEnd="16dp"
      android:text="@string/person_download_cancel_all"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </android.support.constraint.ConstraintLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@color/backgroundControl"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/cl_recent_download">

    <android.support.v7.widget.RecyclerView
      android:id="@+id/rv_download_manager_list"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  </LinearLayout>

  <TextView
    android:id="@+id/tv_tip_download_manager"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/tip_no_download"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cl_global" />

</android.support.constraint.ConstraintLayout>